# wish

./: Cargo.toml  LICENSE
crates/wish-lexer/: Cargo.toml  spec.md
crates/wish-lexer/src/: lib.rs
crates/wish-parser/: Cargo.toml
crates/wish-parser/src/: lib.rs
crates/wishc/: Cargo.toml
crates/wishc/src/: lib.rs
