[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/satler-git/takusu"

[workspace.dependencies]
thiserror = "2.0"

tokio = { version = "1.52.0", features = ["full"] }

wish-lexer = { path = "./crates/wish-lexer/" }
wish-parser = { path = "./crates/wish-parser/" }
